--- a/spec/04Defs.tex
+++ b/spec/04Defs.tex
@@ -38,11 +38,11 @@ $u=u_1 u_2\ldots u_n$ и
 $v=v_1 v_2\ldots v_m$;
 \\[4pt]
 %
-$\texttt{01234\ldots}_{16}$ && 
+$\hex{01234\ldots}$ && 
 представление $u\in\{0,1\}^{4*}$ шестнадцатеричным словом,
 при котором последовательным четырем символам~$u$ соответствует
 один шестнадцатеричный символ
-(например, $10100010=\texttt{A2}_{16}$);
+(например, $10100010=\hex{A2}$);
 \\[4pt]
 %
 $x\bmod m$             &&
@@ -176,14 +176,14 @@ $$
 тетрада & символ & тетрада & символ & тетрада & символ & тетрада & символ\\
 \hline
 \hline
-0000 & $\texttt{0}_{16}$ & 0001 & $\texttt{1}_{16}$ & 
-0010 & $\texttt{2}_{16}$ & 0011 & $\texttt{3}_{16}$\\
-0100 & $\texttt{4}_{16}$ & 0101 & $\texttt{5}_{16}$ & 
-0110 & $\texttt{6}_{16}$ & 0111 & $\texttt{7}_{16}$\\ 
-1000 & $\texttt{8}_{16}$ & 1001 & $\texttt{9}_{16}$ & 
-1010 & $\texttt{A}_{16}$ & 1011 & $\texttt{B}_{16}$\\ 
-1100 & $\texttt{C}_{16}$ & 1101 & $\texttt{D}_{16}$ & 
-1110 & $\texttt{E}_{16}$ & 1111 & $\texttt{F}_{16}$\\ 
+0000 & $\hex{0}$ & 0001 & $\hex{1}$ & 
+0010 & $\hex{2}$ & 0011 & $\hex{3}$\\
+0100 & $\hex{4}$ & 0101 & $\hex{5}$ & 
+0110 & $\hex{6}$ & 0111 & $\hex{7}$\\ 
+1000 & $\hex{8}$ & 1001 & $\hex{9}$ & 
+1010 & $\hex{A}$ & 1011 & $\hex{B}$\\ 
+1100 & $\hex{C}$ & 1101 & $\hex{D}$ & 
+1110 & $\hex{E}$ & 1111 & $\hex{F}$\\ 
 \hline
 \end{tabular}
 \end{table}
@@ -191,10 +191,10 @@ $$
 Пары последовательных тетрад образуют октеты.
 Последовательные октеты слова~$w$ имеют вид:
 $$
-1011 0001=\texttt{B1}_{16},\ 
-1001 0100=\texttt{94}_{16},\ 
-1011 1010=\texttt{BA}_{16},\  
-1100 1000=\texttt{C8}_{16}.
+1011 0001=\hex{B1},\ 
+1001 0100=\hex{94},\ 
+1011 1010=\hex{BA},\  
+1100 1000=\hex{C8}.
 $$
 
 \subsection{Слова как числа}
