--- a/spec/bake.tex
+++ b/spec/bake.tex
@@ -5,9 +5,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
 
-%\pdfpkresolution=2000
-%\pdfpkmode={supre}
-
 \usepackage{amsmath,amssymb,xspace,xifthen,graphicx,float,color}
 \usepackage{ucs,textcase}
 
@@ -57,6 +54,7 @@
 
 \renewcommand{\baselinestretch}{1.05}
 \setcounter{tocdepth}{1}
+\pagestyle{headings}
 
 \begin{document}
 \begin{sloppypar}
