--- a/spec/04Defs.tex
+++ b/spec/04Defs.tex
@@ -95,17 +95,17 @@ $kP$       &&
 кратная~$P$ точка;
 \\[4pt]
 %
-$l$       &&
+$\ell$     &&
 уровень стойкости,
 число из множества $\{128, 192, 256\}$;
 \\[4pt]
 %
 $\langle P\rangle_n$    &&
 для~$P=(x,y)\in E_{a,b}^*(\FF_p)$, 
-где $2^{2l-1}<p<2^{2l}$, 
+где $2^{2\ell-1}<p<2^{2\ell}$, 
 слово из первых~$n$ символов 
-слова~$\langle x\rangle_{2l}\parallel \langle y\rangle_{2l}$,
-$n\leq 4l$;
+слова~$\langle x\rangle_{2\ell}\parallel \langle y\rangle_{2\ell}$,
+$n\leq 4\ell$;
 \\[4pt]
 %
 $c\leftarrow u$         &&
