--- a/spec/05Common.tex
+++ b/spec/05Common.tex
@@ -151,20 +151,18 @@ BSTS~(\ref{STS}) и BPACE~(\ref{PACE}).
 выдать себя за другую сторону, не зная долговременный 
 личный ключ этой стороны (BMQV, BSTS) или общий пароль (BPACE).
 
-Стойкость протоколов определяется уровнем~$l\in\{128,192,256\}$.
+Стойкость протоколов определяется уровнем~$\ell\in\{128,192,256\}$.
 %
-На уровне~$l$ для определения общего ключа по сообщениям
+На уровне~$\ell$ для определения общего ключа по сообщениям
 протокола злоумышленнику требуется выполнить 
-порядка~$2^l$ операций. 
+порядка~$2^\ell$ операций. 
 %
 Cтойкость основывается на сложности дискретного логарифмирования 
-в группе точек эллиптической кривой
-и на сложности вычислительной задачи 
+в группе точек эллиптической кривой и на сложности вычислительной задачи 
 Диффи~--- Хеллмана в этой группе (см. приложение~\ref{DH}).
 %
-Оценки стойкости не изменятся, 
-если на уровне~$l\in\{128,192\}$ длина общего ключа уменьшится 
-c~$256$ до~$l$.
+Оценки стойкости не изменятся, если на уровне~$\ell\in\{128,192\}$ длина общего
+ключа уменьшится c~$256$ до~$\ell$.
 
 Протоколы обеспечивают защиту от <<чтения назад>>. 
 Это значит, что определение общего ключа остается такой же трудной
@@ -180,10 +178,10 @@ c~$256$ до~$l$.
 % todo: раскрытие общего ключа
 % todo: раскрытие одноразовых ключей
 
-Уровень~$l$ определяет длины параметров, 
+Уровень~$\ell$ определяет длины параметров, 
 ключей, сообщений и, соответственно, быстродействие протоколов. 
 %
-Следует учитывать, что с ростом~$l$, кроме повышения стойкости,
+Следует учитывать, что с ростом~$\ell$, кроме повышения стойкости,
 снижается быстродействие.
 
 Явное подтверждение ключа основано на проверке имитовставок,
@@ -218,7 +216,7 @@ c~$256$ до~$l$.
 
 {\bf Модуль~$p$.} 
 Используется простое число $p$, которое удовлетворяет условиям:
-$2^{2l-1}<p<2^{2l}$, $p\equiv 3\pmod{4}$.
+$2^{2\ell-1}<p<2^{2\ell}$, $p\equiv 3\pmod{4}$.
 %
 Модуль определяет поле~$\FF_p$, 
 над которым строится эллиптическая кривая.
@@ -241,7 +239,7 @@ $4a^3+27b^2\not\equiv 0\pmod{p}$.
 %
 Выбирается группа, порядок которой удовлетворяет следующим ограничениям:
 $q$~--- простое,
-$2^{2l-1}<q<2^{2l}$,
+$2^{2\ell-1}<q<2^{2\ell}$,
 $q\neq p$,
 $q$ не делит числа вида $p^m-1$ для~$m=1,2,\ldots,50$.
 
@@ -286,8 +284,8 @@ $q$ не делит числа вида $p^m-1$ для~$m=1,2,\ldots,50$.
 
 В информационных системах ключи представляются двоичными словами.
 Для обеспечения совместимости рекомендуется представлять
-личный ключ~$d$ словом~$\langle d\rangle_{2l}$,
-а открытый ключ~$Q$~--- словом~$\langle Q\rangle_{4l}$.
+личный ключ~$d$ словом~$\langle d\rangle_{2\ell}$,
+а открытый ключ~$Q$~--- словом~$\langle Q\rangle_{4\ell}$.
 
 \section{Пароль}\label{COMMON.Pwd}
 
@@ -320,7 +318,7 @@ $q$ не делит числа вида $p^m-1$ для~$m=1,2,\ldots,50$.
 контрольная характеристика~$Q$.
 %
 В последнем случае идентификатор может явно не включаться в сертификат, сам
-сертификат представлять собой слово~$\langle Q\rangle_{4l}$, а его проверка
+сертификат представлять собой слово~$\langle Q\rangle_{4\ell}$, а его проверка
 состоять в сравнении идентификатора стороны протокола с контрольной
 характеристикой~$Q$.
 \end{note}
@@ -390,7 +388,7 @@ $q$ не делит числа вида $p^m-1$ для~$m=1,2,\ldots,50$.
 Кроме долговременных ключей и паролей стороны используют одноразовые ключи. Во
 всех протоколах применяются одноразовый личный ключ~$u\in\{1,2,\ldots,q-1\}$ и
 одноразовый открытый ключ~$V\in E_{a,b}^*(\FF_p)$. В протоколе BPACE
-дополнительно используется одноразовый секретный ключ~$R\in\{0,1\}^{l}$.
+дополнительно используется одноразовый секретный ключ~$R\in\{0,1\}^\ell$.
 
 Одноразовые личный и секретный ключи должны вырабатываться без возможности
 предсказания и уничтожаться после использования.
@@ -400,17 +398,17 @@ $q$ не делит числа вида $p^m-1$ для~$m=1,2,\ldots,50$.
 генерации псевдослучайных чисел, определенный в СТБ~34.101.47 или в другом ТНПА.
 Входные данные алгоритма должны включать секретный ключ, известный только
 владельцу генерируемого ключа, и уникальную синхропосылку. Длина ключа алгоритма
-генерации должна быть не меньше~$l$.
+генерации должна быть не меньше~$\ell$.
 
 \begin{note*}
 Личные ключи~--- числа из множества~$\{1,2,\ldots,q-1\}$~--- 
 генерируются, как правило, в два этапа: cначала строятся случайные 
 или псевдослучайные двоичные слова, которые затем преобразуются в числа. 
 Для генерации личных ключей по такой схеме 
-рекомендуется строить слова~$u\in\{0,1\}^{2l}$ до тех пор, 
+рекомендуется строить слова~$u\in\{0,1\}^{2\ell}$ до тех пор, 
 пока не будет выполнено условие~$\bar{u}\in\{1,2,\ldots,q-1\}$,
 и объявлять окончательное число~$\bar{u}$ результатом генерации.
-В среднем потребуется проверить $2^{2l}/(q-1)$ чисел-кандидатов.
+В среднем потребуется проверить $2^{2\ell}/(q-1)$ чисел-кандидатов.
 \end{note*}
 
 \section{Приветственные сообщения}\label{COMMON.Hello}
