--- a/spec/062SWU.tex
+++ b/spec/062SWU.tex
@@ -6,11 +6,11 @@
 являются параметры $p$, $a$ и~$b$, которые описывают группу точек. 
 Параметры должны удовлетворять требованиям, 
 заданным в~\ref{COMMON.Params}. 
-По модулю~$p$ определяется уровень стойкости~$l$ как минимальное 
-натуральное, для которого~$p<2^{2l}$.
+По модулю~$p$ определяется уровень стойкости~$\ell$ как минимальное 
+натуральное, для которого~$p<2^{2\ell}$.
 
 Кроме параметров эллиптической кривой,
-входными данными алгоритма является слово~$X\in\{0,1\}^{2l}$.
+входными данными алгоритма является слово~$X\in\{0,1\}^{2\ell}$.
 
 Выходными данными является точка $W\in E_{a,b}^*(\FF_p)$, 
 представляющая~$X$.
@@ -27,7 +27,7 @@
 защищенный ключ~$Y\in\{0,1\}^{|X|+128}$.
 
 {\bf Переменная $H$}.
-Используется переменная~$H\in\{0,1\}^{2l+128}$.
+Используется переменная~$H\in\{0,1\}^{2\ell+128}$.
 Значение~$H$ должно быть уничтожено после использования.
 
 {\bf Элементы $\FF_p$}.
