--- a/spec/071InOut.tex
+++ b/spec/071InOut.tex
@@ -4,8 +4,8 @@
 параметры~$p$, $a$, $b$, $q$ и~$G$, 
 которые описывают группу точек эллиптической кривой. 
 Параметры должны удовлетворять требованиям, заданным в~\ref{COMMON.Params}. 
-По модулю~$p$ определяется уровень стойкости~$l$ как минимальное 
-натуральное, для которого $p<2^{2l}$.
+По модулю~$p$ определяется уровень стойкости~$\ell$ как минимальное 
+натуральное, для которого $p<2^{2\ell}$.
 
 Параметры эллиптической кривой могут согласовываться в 
 приветственных сообщениях $\hello_A,\hello_B$ (см.~\ref{COMMON.Hello}),
