--- a/spec/93ASN.tex
+++ b/spec/93ASN.tex
@@ -40,8 +40,8 @@
 
 \hiddensection{Описание долговременного открытого ключа}\label{ASN.PubKey}
 
-На уровне стойкости~$l$ долговременному открытому ключу~$Q$ 
-ставится в соответствие двоичное слово~$\langle Q\rangle_{4l}$,
+На уровне стойкости~$\ell$ долговременному открытому ключу~$Q$ 
+ставится в соответствие двоичное слово~$\langle Q\rangle_{4\ell}$,
 для описания которого может использоваться тип \texttt{PublicKey},
 определенный в СТБ~34.101.45 (приложение~Д).
 
