--- a/spec/99Errata.tex
+++ b/spec/99Errata.tex
@@ -4,7 +4,7 @@
 \mbox{}
 
 \begin{center}
-\begin{tabular}{|p{2.9cm}|p{6.3cm}|p{6.3cm}|}
+\begin{tabular}{|p{2.9cm}|p{6.2cm}|p{6.4cm}|}
 \hline
 В каком месте & Напечатано & Должно быть\\
 \hline
@@ -22,10 +22,10 @@
 шаг 4.4
 &
 $t\leftarrow\langle\algname{belt-hash}
-(\langle V_A\rangle_{2l}\parallel\langle V_B\rangle_{2l})\rangle$;
+(\langle V_A\rangle_{2\ell}\parallel\langle V_B\rangle_{2\ell})\rangle$;
 &
 $t\leftarrow\langle\algname{belt-hash}
-(\langle V_A\rangle_{2l}\parallel\langle V_B\rangle_{2l})\rangle_l$;
+(\langle V_A\rangle_{2\ell}\parallel\langle V_B\rangle_{2\ell})\rangle_\ell$;
 \\
 \hline
 Пункт~\ref{STS.Steps},\par
